fixed-gap

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body {
 .contactIcons {
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 40px;
     font-size: 30px;
     padding-top: 15px;
     padding-bottom: 10px;
